[package]
name = "titun-hacl"
version = "0.1.0"
authors = ["Yin Guanhao <sopium@mysterious.site>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = { version = "1.0.54", features = [ "parallel" ] }

# For performance comparison.
[dev-dependencies]
libsodium-sys = "0.2.5"
x25519-dalek = "0.6.0"
